Added Public Endpoint using own Lambda without the need for Security.
