# breadly-backend/src/app.ts
@@ -4,6 +4,7 @@ import {globalErrorHandler} from "./middleware/error.middleware.js";
 import {technologyController} from "./features/technology/technology.controller.js";
 import {recipeController} from "./features/recipe/recipe.controller.js";
 import {profileController} from "./features/profile/profile.controller.js";
+import {publicController} from "./features/public/public.controller.js";
 import {requireAuth} from "./middleware/auth.middleware.js";
 
 const app = express();
@@ -12,6 +13,7 @@ const app = express();
 app.use(express.json());
 
 app.use('/', operationController);
+app.use('/public', publicController);
 app.use('/technologies', technologyController);
 app.use('/recipe', recipeController);
 app.use('/profile', requireAuth, profileController);
